fixed some layout issues

--- a/index.css
+++ b/index.css
@@ -8,7 +8,7 @@
 .maincomponent {
     display: inline-block;
     text-align: center;
-    margin-top: 10rem;
+    margin-top: 14rem;
     padding: 1rem;
     background-color: white;
     max-width: 300px;
@@ -20,6 +20,7 @@
     height: auto;
     border-radius: 5%;
 
+
 }
 
 .maincomponent h1 {
@@ -28,6 +29,8 @@
     font-weight: 700;
     line-height: 120%;
     letter-spacing: 0px;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .maincomponent p {
@@ -36,4 +39,6 @@
     font-weight: 400;
     line-height: 140%;
     letter-spacing: 0.2px;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
